# fylvur-rs

./: .gitignore  Cargo.toml  README.md  build.rs  fylvur-cfg.example.toml
.cargo/: config.toml
src/: file.rs  main.rs  math.rs  video.rs
