[package]
name = "fylvur"
version = "0.1.0"
edition = "2021"

[dependencies.ffmpeg-next]
version = "5.1.1"
default_features = false
features = ["format", "software-scaling"]

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
serde = { version = "1.0.143", features = ["derive"] }
webp = "0.2.2"
